<resources>
    <string name="app_name">viagens</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Página Inicial</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_viagem">Viagem</string>
    <string name="menu_transporte">Transporte</string>
    <string name="menu_preco">Preço</string>
    <string name="menu_sobre">Sobre</string>
    <string name="message_required">Campo Obrigatório!</string>
    <string name="Validar_data">Formato DD/MM/AAAA</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Guardar">Guardado</string>
</resources>