<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_acerca"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_action_pessoa"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_viagem"
            android:icon="@drawable/ic_action_plane"
            android:title="@string/menu_viagem" />
        <item
            android:id="@+id/nav_transporte"
            android:icon="@drawable/ic_action_car"
            android:title="@string/menu_transporte" />
        <item
            android:id="@+id/nav_preco"
            android:icon="@drawable/ic_action_money"
            android:title="@string/menu_preco" />
        <item
            android:id="@+id/nav_sobre"
            android:icon="@drawable/ic_action_home"
            android:title="@string/menu_sobre" />
    </group>
</menu>