<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_perfil">

    <fragment
        android:id="@+id/nav_perfil"
        android:name="pt.ipg.viagens.ui.Perfil.HomeFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_viagem"
        android:name="pt.ipg.viagens.ui.Transporte.GalleryFragment"
        android:label="@string/menu_viagem"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_transporte"
        android:name="pt.ipg.viagens.ui.Viagem.SlideshowFragment"
        android:label="@string/menu_transporte"
        tools:layout="@layout/fragment_slideshow" />
</navigation>